--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="pages">
 		<div class="container">
 			<h1>liuxuanqiang github pages.</h1>
-			<a href="https://liuxuanqiang.github.io/vue-cnode"></a>
+			<a href="https://liuxuanqiang.github.io/vue-cnode">liuxuanqiang.github.io/vue-cnode</a>
 		</div>
 	</div>
   </body>
